# Qt-GUI-for-Biosim

./: Biosim4Qt.desktop  CMakeLists.txt  README.md  SVGGraphicsItem.cpp  assets.qrc  biosimparser.cpp  biosimrunner.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paraminput.cpp  paraminput.h  qtcsettings.cmake  simulator.cpp
biosim4/: CMakeLists.txt  analysis.cpp  imageWriter.cpp  params.cpp  simulator.cpp  simulator.h
tools/: diversity-plot.gp  survival-plot.gp
